attachments for market

--- a/PositionIn/PositionIn.MarketDetailsViewController.xib
+++ b/PositionIn/PositionIn.MarketDetailsViewController.xib
@@ -37,7 +37,7 @@
                             <rect key="frame" x="0.0" y="252" width="600" height="48"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$99" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Xi-ku-6wR">
-                                    <rect key="frame" x="10" y="14" width="31" height="22"/>
+                                    <rect key="frame" x="10" y="14" width="31" height="21"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
@@ -46,7 +46,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edward Ryan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auo-sU-iGl">
-                                    <rect key="frame" x="497" y="15" width="93" height="18"/>
+                                    <rect key="frame" x="498" y="15" width="92" height="18"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -77,7 +77,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.09 miles" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HXh-sw-ZiT">
-                                    <rect key="frame" x="31" y="44" width="559" height="18"/>
+                                    <rect key="frame" x="31" y="45" width="559" height="18"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                     <color key="textColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -86,7 +86,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edward Ryan" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ucO-Wg-k6s">
-                                    <rect key="frame" x="10" y="72" width="580" height="17"/>
+                                    <rect key="frame" x="10" y="73" width="580" height="17"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -95,7 +95,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="productPinDistance" translatesAutoresizingMaskIntoConstraints="NO" id="6rD-Gn-TxT">
-                                    <rect key="frame" x="10" y="42" width="16" height="17"/>
+                                    <rect key="frame" x="10" y="43" width="16" height="17"/>
                                     <color key="tintColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="17" id="1Zp-4g-FYl"/>
@@ -120,10 +120,10 @@
                             </constraints>
                         </view>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" rowHeight="45" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="tN3-qd-T3f" customClass="TableView" customModule="PosInCore">
-                            <rect key="frame" x="0.0" y="399" width="600" height="300"/>
+                            <rect key="frame" x="0.0" y="399" width="600" height="350"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="300" id="yMG-6U-94a"/>
+                                <constraint firstAttribute="height" constant="350" id="yMG-6U-94a"/>
                             </constraints>
                             <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </tableView>
@@ -137,7 +137,7 @@
                         <constraint firstItem="waK-Se-5bD" firstAttribute="leading" secondItem="dQP-hM-JLB" secondAttribute="leading" id="UOW-zL-aIx"/>
                         <constraint firstItem="CV8-ai-ImP" firstAttribute="bottom" secondItem="waK-Se-5bD" secondAttribute="bottom" id="Zv2-Zo-oSA"/>
                         <constraint firstAttribute="trailing" secondItem="tN3-qd-T3f" secondAttribute="trailing" id="ei2-XR-cvY"/>
-                        <constraint firstItem="tN3-qd-T3f" firstAttribute="top" secondItem="1Zd-PE-WQ2" secondAttribute="bottom" id="hd7-Vw-ZCt"/>
+                        <constraint firstItem="tN3-qd-T3f" firstAttribute="top" secondItem="1Zd-PE-WQ2" secondAttribute="bottom" constant="-1" id="hd7-Vw-ZCt"/>
                         <constraint firstItem="1Zd-PE-WQ2" firstAttribute="leading" secondItem="dQP-hM-JLB" secondAttribute="leading" id="kV1-PJ-3h4"/>
                         <constraint firstItem="CV8-ai-ImP" firstAttribute="width" secondItem="dQP-hM-JLB" secondAttribute="width" id="mrI-nA-jhh"/>
                         <constraint firstItem="tN3-qd-T3f" firstAttribute="leading" secondItem="dQP-hM-JLB" secondAttribute="leading" id="pPe-yQ-IXg"/>
