attachments for projects

--- a/PositionIn/ProductDetails/PositionIn.ProductDetailsViewController.xib
+++ b/PositionIn/ProductDetails/PositionIn.ProductDetailsViewController.xib
@@ -37,7 +37,7 @@
                             <rect key="frame" x="0.0" y="252" width="600" height="48"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$99" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Qb-Kh-vAf">
-                                    <rect key="frame" x="10" y="14" width="31" height="22"/>
+                                    <rect key="frame" x="10" y="14" width="31" height="21"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
@@ -46,7 +46,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edward Ryan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yjp-Xw-pBL">
-                                    <rect key="frame" x="497" y="15" width="93" height="18"/>
+                                    <rect key="frame" x="498" y="15" width="92" height="18"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -77,7 +77,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.09 miles" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QaN-CP-TKD">
-                                    <rect key="frame" x="31" y="44" width="559" height="18"/>
+                                    <rect key="frame" x="31" y="45" width="559" height="18"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                     <color key="textColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -86,7 +86,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edward Ryan" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gro-Dr-DFI">
-                                    <rect key="frame" x="10" y="72" width="580" height="17"/>
+                                    <rect key="frame" x="10" y="73" width="580" height="17"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -95,7 +95,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="productPinDistance" translatesAutoresizingMaskIntoConstraints="NO" id="mMa-Jq-qtK">
-                                    <rect key="frame" x="10" y="42" width="16" height="17"/>
+                                    <rect key="frame" x="10" y="43" width="16" height="17"/>
                                     <color key="tintColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="17" id="EnQ-S2-B56"/>
@@ -120,10 +120,10 @@
                             </constraints>
                         </view>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" rowHeight="45" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="G9T-Mf-Naw" customClass="TableView" customModule="PosInCore">
-                            <rect key="frame" x="0.0" y="399" width="600" height="300"/>
+                            <rect key="frame" x="0.0" y="399" width="600" height="350"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="300" id="hXo-g6-KSI"/>
+                                <constraint firstAttribute="height" constant="350" id="hXo-g6-KSI"/>
                             </constraints>
                             <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </tableView>
@@ -132,7 +132,7 @@
                         <constraint firstItem="djR-mn-LSG" firstAttribute="leading" secondItem="214-ZE-nbB" secondAttribute="leading" id="0pG-We-lFi"/>
                         <constraint firstItem="PoZ-37-1wp" firstAttribute="leading" secondItem="214-ZE-nbB" secondAttribute="leading" id="ANi-Ah-w8w"/>
                         <constraint firstItem="djR-mn-LSG" firstAttribute="bottom" secondItem="4jW-Uc-5k3" secondAttribute="bottom" id="DUb-np-c9p"/>
-                        <constraint firstItem="G9T-Mf-Naw" firstAttribute="top" secondItem="PoZ-37-1wp" secondAttribute="bottom" id="E7v-FS-zfX"/>
+                        <constraint firstItem="G9T-Mf-Naw" firstAttribute="top" secondItem="PoZ-37-1wp" secondAttribute="bottom" constant="-1" id="E7v-FS-zfX"/>
                         <constraint firstItem="djR-mn-LSG" firstAttribute="top" secondItem="214-ZE-nbB" secondAttribute="top" id="FOh-sb-SgQ"/>
                         <constraint firstItem="4jW-Uc-5k3" firstAttribute="leading" secondItem="214-ZE-nbB" secondAttribute="leading" id="Ini-fy-7q2"/>
                         <constraint firstAttribute="trailing" secondItem="djR-mn-LSG" secondAttribute="trailing" id="L3h-qn-rzf"/>
