--- a/PositionIn/Classes/Application Layer/Stories/Membership/Interface/MPesaDetails/MPesaIndicatorView.xib
+++ b/PositionIn/Classes/Application Layer/Stories/Membership/Interface/MPesaDetails/MPesaIndicatorView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MPesaIndicatorView" customModule="PositionIn" customModuleProvider="target"/>
@@ -49,9 +49,9 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="activityIndicatorView" destination="i6p-db-fkN" id="li4-jJ-woV"/>
+                <outlet property="paymentCompletedImageView" destination="EeY-WJ-dRb" id="snG-3V-3IH"/>
                 <outlet property="paymentCompletedLabel" destination="a2f-A4-vAC" id="FIU-Gw-nT7"/>
                 <outlet property="paymentConfirmationLabel" destination="glC-gK-Wnx" id="NJD-Y8-OA5"/>
-                <outlet property="successImageView" destination="EeY-WJ-dRb" id="N3G-8e-ASb"/>
             </connections>
             <point key="canvasLocation" x="418" y="332"/>
         </view>
