--- a/PositionIn/Classes/Application Layer/Stories/Membership/Interface/MemberCard/MembershipMemberCardViewController.xib
+++ b/PositionIn/Classes/Application Layer/Stories/Membership/Interface/MemberCard/MembershipMemberCardViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -13,6 +13,7 @@
                 <outlet property="membershipCardView" destination="PPC-Mh-6wS" id="ikF-qC-sZ6"/>
                 <outlet property="titleNavigationItem" destination="Rmd-0j-449" id="fPq-kR-JI4"/>
                 <outlet property="upgradeButton" destination="sZq-ih-ihb" id="lvq-cg-cpX"/>
+                <outlet property="upgradeView" destination="leQ-pi-pJa" id="NRv-w8-QiR"/>
                 <outlet property="view" destination="iN0-l3-epB" id="gAF-ZK-e43"/>
             </connections>
         </placeholder>
@@ -48,14 +49,6 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w0d-GP-c5r">
                     <rect key="frame" x="0.0" y="263" width="600" height="120"/>
                     <subviews>
-                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GC2-Nv-NOA">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="1"/>
-                            <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
-                        </view>
-                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eUH-1u-Ay2">
-                            <rect key="frame" x="0.0" y="119" width="600" height="1"/>
-                            <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
-                        </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="leQ-pi-pJa">
                             <rect key="frame" x="0.0" y="0.0" width="300" height="120"/>
                             <subviews>
@@ -128,9 +121,15 @@
                         <constraint firstItem="bld-oJ-Bc9" firstAttribute="top" secondItem="w0d-GP-c5r" secondAttribute="top" id="Icc-5P-1P9"/>
                         <constraint firstItem="leQ-pi-pJa" firstAttribute="leading" secondItem="w0d-GP-c5r" secondAttribute="leading" id="dIn-mb-3nR"/>
                         <constraint firstAttribute="bottom" secondItem="bld-oJ-Bc9" secondAttribute="bottom" id="g4S-gB-Fqr"/>
+                        <constraint firstItem="bld-oJ-Bc9" firstAttribute="width" secondItem="w0d-GP-c5r" secondAttribute="width" multiplier="1:2" id="h27-VX-llh"/>
                         <constraint firstAttribute="bottom" secondItem="leQ-pi-pJa" secondAttribute="bottom" id="lHL-VY-a8a"/>
                         <constraint firstItem="leQ-pi-pJa" firstAttribute="top" secondItem="w0d-GP-c5r" secondAttribute="top" id="zSn-vX-kfr"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="5fo-9s-H9A"/>
+                        </mask>
+                    </variation>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
